--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,15 +1,15 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: Brage Wiseth
+dp:
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    LaTex Cheatsheet
   </p>
   <br/>
   <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
+    nn
   </P>
 "
-email: dev_sharad@outlook.com
+email: bruh@mail.no
 contact:
   - title: linkedin
     url: https://www.linkedin.com/in/srsmaurya
