--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Jekyll Serial Programmer
+title: LaTex Cheatsheet
 markdown: kramdown
 
 # for atom feed
 author:
-  name: Sharad Raj Singh Maurya
-  email: dev_sharad@outlook.com
+  name: Brage Wiseth
 
 plugins:
   - jemoji
