--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
 
-exclude: ["sitemap.xml", "feed.xml", "LICENSE", "README.md"]
+exclude: ["sitemap.xml", "feed.xml", "LICENSE"]
