--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 
 # for atom feed
 
-source              : ./
+source              : .
 destination         : ./_site
 layouts_dir         : _layouts
 data_dir            : _data
