--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # for atom feed
 
 source              : ./all_collections/_posts/
-destination         : ./_site
+destination         : ./root/
 layouts_dir         : _layouts
 data_dir            : _data
 includes_dir        : _includes
