--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 
 # for atom feed
 
-source              : ./all_collections/_posts/
+source              : .
 destination         : ./root/
 layouts_dir         : _layouts
 data_dir            : _data
